@@ -867,7 +867,7 @@ Localization
             #LOC_BDArmory_AI_ManeuverRCS_enabledText = Always
             #LOC_BDArmory_AI_ManeuverRCS_disabledText = Combat Only
             #LOC_BDArmory_AI_OrbitalPIDActive = PID Active For
-            #LOC_BDArmory_AI_RollMode = Preferred Roll Tgt
+            #LOC_BDArmory_AI_RollMode = Broadside Dir
             #LOC_BDArmory_AI_MinObstacleMass = Min Obstacle Mass
             #LOC_BDArmory_AI_PreferredBroadsideDirection = Preferred Broadside Dir
             #LOC_BDArmory_AI_GoesUp = Goes up to 
